refactoring: sep out doc types & sorted post,del
